@@ -54,7 +54,7 @@ namespace http
 
 				if (tmp == -1)
 				{
-					SDL_Delay(1);
+					utils::sleep(1);
 					continue;
 				}
 
@@ -65,7 +65,7 @@ namespace http
 				if (fs == -1)
 				{
 					close(tmp);
-					SDL_Delay(10);
+					utils::sleep(10);
 					continue;
 				}
 				http::connected[fs] = tmp;
